# shop_app

./: .env.non.dev  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  mock.py  pyproject.toml
docker/: app.sh
migrations/: env.py
migrations/versions/: 0ce3c599ec56_add_autoincrement_to_order.py  2023-09-07_dcd97f3664d3_database_creation.py  2677a52c8d6c_little_check.py  32eb11a6589e_create_role_and_order.py  4502a236b57e_initial_revision.py  71cfe8d64739_fix_user.py  7aa0459e89bd_initial_migration.py  870f012a9693_create_role_and_order.py  c99e640bfb28_fix_user.py
real_db_tests/: test_auth.py  test_item.py
src/: config.py  database.py  main.py
src/api/: api.py  dependencies.py
src/api/endpoints/: item.py  order.py  user.py
src/auth/: model.py  models.py  router.py  schemas.py  service.py  user.py  utils.py
src/core/: config.py
src/db/: db.py
src/item/: models.py  router.py  schemas.py  service.py
src/models/: item_model.py  order_model.py  role_model.py  user_model.py
src/order/: models.py  router.py  schemas.py  service.py
src/pages/: router.py
src/repositories/: order_repo.py  user_repo.py
src/schemas/: item_schema.py  order_schema.py  user_schema.py
src/services/: item_service.py  order_service.py  user_service.py
src/templates/: base.html  search.html
src/utils/: repository.py
tests/: conftest.py  test_auth.py  test_item.py
